[package]
name = "staging-xcm-builder"
description = "Tools & types for building with XCM and its executor. (polkadot v1.15.0)"
authors.workspace = true
edition.workspace = true
license.workspace = true
version = "16.0.0"

[lints]
workspace = true

[dependencies]
impl-trait-for-tuples = { workspace = true }
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }
sp-arithmetic = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-weights = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-asset-conversion = { workspace = true }
log = { workspace = true }
polkadot-parachain-primitives.workspace = true

[dev-dependencies]
sp-core = { workspace = true, default-features = true }
primitive-types = { features = ["codec", "num-traits", "scale-info"], workspace = true }
pallet-balances = { workspace = true, default-features = true }
pallet-xcm = { workspace = true, default-features = true }
pallet-salary = { workspace = true, default-features = true }
pallet-assets = { workspace = true, default-features = true }
polkadot-primitives = { workspace = true, default-features = true }
polkadot-runtime-parachains = { workspace = true, default-features = true }
assert_matches = { workspace = true }
polkadot-test-runtime = { path = "../../runtime/test-runtime" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-asset-conversion/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-asset-conversion/std",
	"pallet-transaction-payment/std",
	"polkadot-parachain-primitives/std",
	"primitive-types/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-weights/std",
	"xcm-executor/std",
	"xcm/std",
]
